Added web controller
Added web controller

--- a/acropolis-web/src/main/resources/app.properties
+++ b/acropolis-web/src/main/resources/app.properties
@@ -1,8 +1,8 @@
 # ====================================================================================================
 # DB
 # ====================================================================================================
-db.user=acropolis
-db.password=acropolis
+db.user=cca
+db.password=cca
 db.url=jdbc:oracle:thin:@//localhost:1521/ORCL
 db.type=oracle
 db.driver=oracle.jdbc.OracleDriver
