Added map widget
Added map marker and infowindow

--- a/acropolis-web/src/main/resources/app.properties
+++ b/acropolis-web/src/main/resources/app.properties
@@ -6,3 +6,6 @@ db.password=cca
 db.url=jdbc:oracle:thin:@//localhost:1521/ORCL
 db.type=oracle
 db.driver=oracle.jdbc.OracleDriver
+
+
+google.map.key=
