--- a/acropolis-web/pom.xml
+++ b/acropolis-web/pom.xml
@@ -12,6 +12,7 @@
         <log4j.version>1.2.16</log4j.version>
         <mysql.version>5.1.18</mysql.version>
         <oracle.version>10.2.0.2.0</oracle.version>
+        <jackson.version>1.9.10</jackson.version>
         <springframework.version>3.2.3.RELEASE</springframework.version>
         <spring-security.version>3.1.4.RELEASE</spring-security.version>
         <spring-batch.version>2.1.8.RELEASE</spring-batch.version>
@@ -124,6 +125,11 @@
             <artifactId>spring-batch-test</artifactId>
             <version>${spring-batch.version}</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
