--- a/acropolis-web/pom.xml
+++ b/acropolis-web/pom.xml
@@ -315,7 +315,7 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.1.1</version>
                 <configuration>
-                    <warName>electcast</warName>
+                    <warName>acropolis-web</warName>
                 </configuration>
             </plugin>
             <plugin>
