--- a/.gitignore
+++ b/.gitignore
@@ -178,4 +178,5 @@ acropolis-web/indexes
 acropolis-web/target
 acropolis-web/*.iml
 acropolis-web/.idea
-acropolis-mobi/MyApplicationProjects
+acropolis-mob/.gradle
+*.jar
